[tool.poetry]
name = "airbnb-backend"
version = "0.1.0"
description = ""
authors = ["SangHoo Park <sksk8922@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "airbnb_backend"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.7"
pillow = "^9.4.0"
black = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
